k8s-gcp/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: todo
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
